--- a/app/src/main/res/layout/activity_news_hub.xml
+++ b/app/src/main/res/layout/activity_news_hub.xml
@@ -23,7 +23,6 @@
         android:id="@+id/newsList"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="12dp"
@@ -32,6 +31,21 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/search_box" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="@+id/newsList"
+        app:layout_constraintEnd_toEndOf="@+id/newsList"
+        app:layout_constraintStart_toStartOf="@+id/newsList"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <!--<ListView-->
     <!--android:layout_width="match_parent"-->
