--- a/app/src/main/res/layout/activity_news_hub.xml
+++ b/app/src/main/res/layout/activity_news_hub.xml
@@ -53,5 +53,11 @@
     <!--android:id="@+id/newsList"-->
     <!--/>-->
 
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/fragment_frame"/>
+
+
 
 </android.support.constraint.ConstraintLayout>
