--- a/app/src/main/res/layout/fragment_show_details.xml
+++ b/app/src/main/res/layout/fragment_show_details.xml
@@ -1,7 +1,6 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:id="@+id/fragment_frame">
+    android:layout_height="match_parent">
 
     <WebView
         android:layout_width="match_parent"
@@ -9,4 +8,4 @@
         android:id="@+id/webView"/>
 
 
-</FrameLayout>
+</RelativeLayout>
